<resources>

    <string name="app_name">Khabri</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_data_found">No data found.</string>

    <string name="settings_title">News Settings</string>
    <string name="settings_menu_item">Settings</string>

    <string name="topic_name_label">Topic</string>
    <string name="topic_name_key" translatable="false">q</string>
    <string name="topic_name_default" translatable="false">headlines</string>

    <string name="number_news_articles_label">Number of Articles</string>
    <string name="number_news_articles_key" translatable="false">page-size</string>
    <string name="number_news_articles_default" translatable="false">10</string>

    <string name="order_by_label">Order By</string>
    <string name="order_by_key" translatable="false">order-by</string>
    <string name="order_by_default" translatable="false">@string/order_by_newest_value</string>

    <string name="order_by_newest_label">Newest</string>
    <string name="order_by_newest_value" translatable="false">newest</string>

    <string name="order_by_oldest_label">Oldest</string>
    <string name="order_by_oldest_value" translatable="false">oldest</string>

    <string name="order_by_relevance_label">Relevance</string>
    <string name="order_by_relevance_value" translatable="false">relevance</string>

</resources>
